Revision history for {{$dist->name}}

{{$NEXT}}

1.97      2016-01-28 12:08:31 -0500
  - Add [Alien] as a prereq
  - Add [PkgVersion::Block] as a prereq where available
  - Add dictionary for additional correct words

1.96      2016-01-16 16:28:30 -0500
  - Fixes for generated .appveyor.yml

1.95      2016-01-06 14:47:45 -0500
  - Support for appveyor

1.94      2015-12-20 15:15:03 -0700
  - skip xt/release/pod_coverage.t on 5.8
    I've been getting false positives on Alien::Base
    based distros from this test on 5.8 only

1.93      2015-12-13 04:38:01 -0500
  - require Test::Exit 0.11 if used
  - new dists default to travis_status
  - new dists require at least the same version of [@Author::Plicease]

1.92      2015-12-11 13:02:36 -0500
  - rework t/00_diag.t

1.91      2015-12-09 11:41:11 -0500
  - added travis_user option to [@Author::Plicease] and [Author::Plicease::MarkDownCleanup]

1.90      2015-11-24 21:07:35 -0500
  - Created [Author::Plicease::MakeMaker] in attempt to deal
    with File::ShareDir madness.
  - Created [Author::Plicease::DevShare] also to help deal
    with File::ShareDir madness.

1.89      2015-11-22 14:28:47 -0500
  - Minting profile creates t/01_use.t instead of t/use.t which is almost
    always what I move it to anyway.
  - Better default for xt/release/release.yml

1.88      2015-11-18 07:03:59 -0500
  - Allow override of [MinimumPerl]

1.87      2015-11-18 06:28:32 -0500
  - When we see JSON::MaybeXS we will recommend Cpanel::JSON::XS
  - When we see JSON::MaybeXS we will diag on JSON::XS and JSON::PP as well

1.86      2015-11-14 20:31:32 -0500
  - Added undocumented preamble to
    [@Author::Plicease]
    and
    [Author::Plicease::SpecialPrereqs]

1.85      2015-11-03 07:22:39 -0500
  - Add no_readme

1.84      2015-07-30 15:56:35 -0400
  - Added version_plugin option

1.83      2015-07-21 09:08:33 -0400
  - Added upgrade option to [Author::Plicease::SpecialPrereqs]
  - Added upgrade option to [@Author::Plicease]
